fix(css): display issues
Squashed commit of the following:

* update(releasenote)

* update(blockquotes): darken background

* update(releasenote)

* fix(links): update links color and hover

* fix(progress-bar): augment z-index

* fix(imgzoom): augment zoom img z-index

* fix(overview): redo overview text style

* add(releasenote)

* fix(lists): only change margin-top

* fix(lists): remove margin if after a paragraph

* fix(blockquotes): left margin on first line

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,28 +43,42 @@ h1 {
     margin-bottom: 1em;
 }
 
+a {
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 /* Text-style: blockquotes */
 
 blockquote {
-    background: rgba(249, 249, 249, 0.6);
+    background: rgba(220, 220, 220, 0.6);
     border-left: 10px solid #ccc;
     margin: 1.5em 10px;
     padding: 0.5em 20px;
     padding-top: 1.5em;
-    quotes: "\201C""\201C";
 }
 
 blockquote:before {
     color: #ccc;
-    content: open-quote;
+    content: "\201C\A";
     font-size: 3.5em;
-    line-height: 0.1em;
+    line-height: 0.3em;
     margin-right: -0.5em;
     margin-left: -10px;
 }
 
 blockquote p {
     display: inline;
+}
+
+/* Text-style: lists */
+
+p + ul, p + ol {
+    margin-top: -0.6em;
 }
 
 /* Text-style: tables */
@@ -116,7 +130,7 @@ img {
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 99;
+    z-index:  150;
 
     width: 100%;
     height: 100%;
