--- a/static/css/section_break.css
+++ b/static/css/section_break.css
@@ -40,7 +40,7 @@
 
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 120;
 
     border-bottom: 1px solid #dddddd;
 }
